--- a/index.html
+++ b/index.html
@@ -5,6 +5,45 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vue Personal Recorder</title>
+    <title>Mastashake</title>
   </head>
+  <body>
+  <header>
+    <h1>Jyrone Parker</h1>
+    <p>Full Stack Developer | Open Source Enthusiast | mastashake08</p>
+    <nav>
+      <a href="https://github.com/mastashake08" target="_blank">GitHub</a> |
+      <a href="mailto:jyrone.parker@gmail.com">Email</a>
+    </nav>
+  </header>
+  <section>
+    <h2>About Me</h2>
+    <p>
+      Hi! I'm a passionate developer with experience in building web applications using modern technologies.
+      I enjoy contributing to open source and learning new tools and frameworks.
+    </p>
+  </section>
+  <section>
+    <h2>Skills</h2>
+    <ul>
+      <li>HTML / CSS / JavaScript</li>
+      <li>React / Node.js</li>
+      <li>Python / Django</li>
+      <li>Git & GitHub</li>
+    </ul>
+  </section>
+  <section>
+    <h2>Projects</h2>
+    <ul>
+      <li>
+        <strong>My Portfolio:</strong>
+        <a href="https://github.com/mastashake08/" target="_blank">View on GitHub</a>
+      </li>
+      <!-- Add more projects here -->
+    </ul>
+  </section>
+  <footer>
+    <p>&copy; 2025 Jyrone Parker. All rights reserved.</p>
+  </footer>
+</body>
 </html>
